# Gen-AI-PDF-Q-A-Assistant-

PDFqaAssistant-main/: README.md  app.py  pyproject.toml
PDFqaAssistant-main/aimakerspace/: text_utils.py  vectordatabase.py
PDFqaAssistant-main/aimakerspace/google_utils/: chatmodel.py
PDFqaAssistant-main/chroma_db/: chroma.sqlite3
